package edu.hitsz.aircraft;

import edu.hitsz.ShootStrategy.ShootStrategy;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.basic.AbstractFlyingObject;

import java.util.List;

/**
 * 所有种类飞机的抽象父类：
 * 敌机（BOSS, ELITE, MOB），英雄飞机
 *
 * @author hitsz
 */
public abstract class AbstractAircraft extends AbstractFlyingObject {
    /**
     * 生命值
     */
    protected int hp;
    protected int shootNum=0;
    protected int direction=1;
    protected int power=30;

    public int getShootNum() {
        return shootNum;
    }

    public void setShootNum(int shootNum){
        this.shootNum=shootNum;

    }

    public int getDirection() {
        return direction;
    }

    public int getPower() {
        return power;
    }

    protected ShootStrategy shootStrategy;

    public AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY);
        this.hp = hp;
    }

    public void decreaseHp(int decrease){
        hp -= decrease;
        if(hp <= 0){
            hp=0;
            vanish();
        }
    }

    public int getHp() {
        return hp;
    }

    public void SetShootStrategy(ShootStrategy shootStrategy){
        this.shootStrategy=shootStrategy;
    }


    /**
     * 飞机射击方法，可射击对象必须实现
     * @return
     *  可射击对象需实现，返回子弹
     *  非可射击对象空实现，返回null
     */
    public abstract List<BaseBullet> shoot();

    public void setHp(int hp) {
        this.hp = hp;
    }
}


